[project]
name = "remote-server"
version = "0.1.0"
description = "NVDA Remote Access remote relay server."
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "pyopenssl>=25.1.0",
    "service-identity>=24.2.0",
    "twisted>=24.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.401",
    "ruff>=0.11.12",
]

[tool.pyright]
venvPath = ".venv"
venv = "."
pythonPlatform = "Linux"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"setup.py",
	# When excluding concrete paths relative to a directory,
	# not matching multiple folders by name e.g. `__pycache__`,
	# paths are relative to the configuration file.
]

# General config
analyzeUnannotatedFunctions = false
deprecateTypingAliases = true

reportMissingTypeArgument=false
reportUnknownVariableType=false
reportAttributeAccessIssue=false
reportUnknownMemberType=false
reportUnknownParameterType=false
reportUnknownArgumentType=false
reportMissingParameterType=false
reportUnknownLambdaType=false
reportUnusedVariable=false
reportOptionalMemberAccess=false
reportDeprecated=false

[tool.ruff]
line-length = 110

include = [
	"*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]
