[project]
name = "remote-server"
version = "0.1.0"
description = "NVDA Remote Access remote relay server."
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "pyopenssl~=25.1",
    "service-identity~=24.2",
    "twisted~=24.11",
]

[dependency-groups]
dev = [
    "coverage~=7.8",
    "pre-commit~=4.2",
    "pyright~=1.1",
    "ruff~=0.11",
]

[tool.pyright]
venvPath = ".venv"
venv = "."
pythonPlatform = "Linux"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"setup.py",
	# When excluding concrete paths relative to a directory,
	# not matching multiple folders by name e.g. `__pycache__`,
	# paths are relative to the configuration file.
]

# General config
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true

# The following options cause problems due to polymorphism in Twisted
reportAttributeAccessIssue = false
reportUnknownMemberType = false
reportOptionalMemberAccess = false
# The following option causes problems due to dynamic member access
reportUnknownArgumentType = false


[tool.ruff]
line-length = 110

include = [
	"*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]

[tool.coverage.run]
branch = true
command_line = "-m twisted.trial ./test.py"

[tool.coverage.report]
fail_under = 100
exclude_also = [
    'if __name__ == .__main__.:',
]
